--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor="#fbbc07"
-backgroundColor="#262730"  # <-- Cor alterada aqui
+backgroundColor="#282a2c"  # <-- Cor alterada aqui
 secondaryBackgroundColor="#011950"
 textColor="#FFFFFF"
 font="sans serif"
